# Agentic-AFL

./: .env-example  LICENSE  README.md  docker-compose.yml  pyproject.toml
agentic-afl/: __init__.py  campaign.py  cli.py  config.py  constants.py  models.py  tui.py
agentic-afl/database/: __init__.py  spec_store.py
agentic-afl/extractor/: __init__.py  constraint_profiler.py  offset_probe.py  pcode_slicer.py  spec_exporter.py
agentic-afl/extractor/ghidra_scripts/: extract_pcode.py
agentic-afl/fuzzer_bridge/: __init__.py  diversity_generator.py  payload_injector.py  stall_detector.py
agentic-afl/orchestrator/: __init__.py  agent_loop.py  harvest_mode.py  llm_client.py  retrieval_carm.py  z3_sandbox.py
agentic-afl/orchestrator/prompts/: __init__.py  react_templates.py  z3_translation.py
database/: init.sql
