[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-afl"
version = "0.1.0-dev"
description = "Neuro-Symbolic Fuzzing Orchestration for Brownfield ICS Binaries"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    # Z3 SMT Solver — the formal reasoning engine
    "z3-solver>=4.12.0",

    # PostgreSQL async driver (server-side Jaccard for CARM retrieval)
    "asyncpg>=0.29.0",

    # LLM API clients
    "openai>=1.30.0",
    "google-genai>=1.0.0",

    # Async HTTP (for LLM API calls)
    "httpx>=0.27.0",

    # Environment configuration
    "python-dotenv>=1.0.0",

    # TUI dashboard
    "rich>=13.0",

    # Data validation (future: replace dataclasses with Pydantic if needed)
    # "pydantic>=2.0",
]

[project.scripts]
agentic-afl = "agentic_afl.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4.0",
    "mypy>=1.10",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["agentic_afl*"]
